Fix(frontend): Console no longer overflows

--- a/Software/AppWeb/frontend/src/components/Console/Console.css
+++ b/Software/AppWeb/frontend/src/components/Console/Console.css
@@ -3,10 +3,11 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-width: 0;
+    box-sizing: border-box;
 }
 .column-content .console button {
     padding: 5px;
-    flex: 1;
     border-radius: 4px;
     transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
     border: none;
@@ -47,10 +48,9 @@
     font-weight: bold;
 }
 .console-indicator {
-    flex: 2;
+    flex: 1;
 }
 .console-header-managers {
-    flex: 1;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -59,10 +59,12 @@
 }
 .console-filters {
     position: absolute;
+    display: flex;
+    flex-direction: column;
 }
 
 .console-content {
-    flex: 1 0 auto;
+    flex: 1;
     display: flex;
     flex-direction: column;
     padding: 10px;
@@ -91,7 +93,9 @@
     border-radius: 0px 0px 8px 8px;
 }
 .console-input {
-    flex: 3;
+    flex: 1;
+    min-width: 0px;
+    width: 100%;
     padding: 5px;
     border: none;
     border-radius: 4px;
